--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,20 @@
+version: "3.8"
+
 services:
   backend:
     build: .
-    ports:
-      - "5000:5000"
     environment:
-      NODE_ENV: "production"
-    command: ["npm", "run", "start"]  # Use Node instead of Nodemon
+      - NODE_ENV=production
+    env_file:
+      - .env
+    command: ["npm", "run", "start"]  # Run production server
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    depends_on:
+      - backend
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Read-only nginx config
