--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   backend:
-    build: .
+    image: ghcr.io/rajibmiah/ai-assistant-server:latest
     environment:
       - NODE_ENV=production
     env_file:
