--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   backend:
-    build: .
+    image: ghcr.io/rajibmiah/ai-assistant-server:latest
     ports:
       - "5000:5000"
     volumes:
