--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       - mongo
     environment:
       - MONGO_URI=mongodb://mongo:27017/mydatabase
+      - NEXHEALTH_API_URL=https://nexhealth.info
+      - NEXHEALTH_SUBDOMAIN=fomoline-demo-practice-sr8swn
+      - NEXHEALTH_API_KEY=dXNlci01Nzgtc2FuZGJveA.gi-wu0zO0mA6K3Ge6TZQqmXzwfPYEErV
+      - NEXHEALTH_LOCATION_ID=293267
+      
     command: ["npm", "run", "dev"]  # Run in dev mode with Nodemon
 
   mongo:
