--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,15 @@
 events {
   worker_connections 1024;
 }
-
+upstream backend{
+   server 0.0.0.0:5000
+}
 http {
   server {
     listen 80;
-
+    server_name aiassist.eleveapps.ca;
     location / {
-      proxy_pass http://backend:5000;
+      proxy_pass http://backend;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
