--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-
-
 services:
   backend:
     build:
-      context: .  # Ensure Dockerfile exists in the root directory
+      context: . # Ensure Dockerfile exists in the root directory
     image: ghcr.io/rajibmiah/ai-assistant-backend:latest
     container_name: ai-assistant-backend
     environment:
@@ -11,18 +9,12 @@ services:
       - MONGO_URI=mongodb://mongo:27017/mydatabase
       - NEXHEALTH_API_URL=https://nexhealth.info
       - NEXHEALTH_SUBDOMAIN=fomoline-demo-practice-sr8swn
-      #- NEXHEALTH_API_KEY=dXNlci01Nzgtc2FuZGJveA.gi-wu0zO0mA6K3Ge6TZQqmXzwfPYEErV
       - NEXHEALTH_LOCATION_ID=293267
-
     env_file:
       - .env
-    depends_on:
-      - nginx
     networks:
       - app-network
-    ports:
-      - "5000:5000"
-    command: ["npm", "run", "start"] 
+    command: [ "npm", "run", "start" ]
 
   # mongo:
   #   image: mongo:6
@@ -37,26 +29,39 @@ services:
   #     retries: 5
   #     start_period: 5s
 
+
   nginx:
     build:
-      context: ./nginx  # Ensure that the nginx folder contains a Dockerfile
-    # image: t
+      context: ./nginx # Ensure that the nginx folder contains a Dockerfile
     container_name: nginx
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
-    # depends_on:
-    #   backend:
-    #     condition: service_started
+
+    depends_on:
+      - backend # ✅ Updated this line
+    networks:
+      - app-network
+
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    # - ./nginx/certs:/etc/nginx/certs:ro # Ensure certs exist inside nginx folder
+    # command: [ "nginx", "-g", "daemon off;" ]
+
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
     networks:
       - app-network
     volumes:
-      - ./nginx/certs:/etc/nginx/certs:ro  # Ensure certs exist inside nginx folder
-    
-    command: ["nginx", "-g", "daemon off;"]
-
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email ahmedrajib942@gmail.com -d aiassist.eleveapps.ca --agree-tos
 networks:
   app-network:
+
 
 volumes:
   mongo-data:
