--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,15 +5,21 @@ events {
 }
 
 http {
+
     upstream backend {
         server ai-assistant-backend:5000;  # Use the service name from docker-compose
     }
 
     # Redirect HTTP to HTTPS
     server {
-        listen 80;
+        listen 80 default_server;
+
         server_name aiassist.eleveapps.ca;
 
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
         location / {
             return 301 https://$host$request_uri;
         }
@@ -21,10 +27,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name aiassist.eleveapps.ca;
+        server_name api.eleveapps.ca;
 
-        ssl_certificate /etc/nginx/certs/aiassist.eleveapps.ca.crt;
-        ssl_certificate_key /etc/nginx/certs/aiassist.eleveapps.ca.key;
+        ssl_certificate     /etc/letsencrypt/live/aiassist.eleveapps.ca/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/aiassist.eleveapps.ca/privkey.pem;
         
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
@@ -36,5 +42,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+        
+
     }
 }
