make route for auth

--- a/certbot/conf/renewal/aiassist.eleveapps.ca.conf
+++ b/certbot/conf/renewal/aiassist.eleveapps.ca.conf
@@ -1,5 +1,5 @@
 # renew_before_expiry = 30 days
-version = 2.9.0
+version = 3.2.0
 archive_dir = /etc/letsencrypt/archive/aiassist.eleveapps.ca
 cert = /etc/letsencrypt/live/aiassist.eleveapps.ca/cert.pem
 privkey = /etc/letsencrypt/live/aiassist.eleveapps.ca/privkey.pem
@@ -8,8 +8,9 @@ fullchain = /etc/letsencrypt/live/aiassist.eleveapps.ca/fullchain.pem
 
 # Options used in the renewal process
 [renewalparams]
-account = 39ecb1c611f99e980bd5b8a3d9bc4b1c
-authenticator = nginx
-installer = nginx
+account = 7c55de240f935a4a435880fceb998d77
+authenticator = webroot
 server = https://acme-v02.api.letsencrypt.org/directory
 key_type = ecdsa
+webroot_path = /var/www/certbot,
+[[webroot_map]]
