--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongoose": "^8.10.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
